--- a/menu_deroulant.html
+++ b/menu_deroulant.html
@@ -4,39 +4,39 @@
 	<meta charset="utf-8">
 	<title>menu deroulant</title>
 	<style type="text/css"> #menu { display: flex; justify-content: center; list-style: none;width: 300px; height: 30px;border-radius: 6px;  background :linear-gradient(60deg, rgba(181, 191, 206, 0.4) 2%,rgba(164, 168, 173, 0.7));}
-	ul{ background: linear-gradient(60deg, rgba(181, 191, 206, 0.4) 2%,rgba(164, 168, 173, 0.7)); }
+	ul{ background: linear-gradient(60deg, rgba(181, 191, 206, 0.4) 2%,rgba(164, 168, 173, 0.7)); border-radius: 6px; list-style: none; }
 	a { margin: 20px;  color: white; } 
 	li { list-style: none;  } </style>
 </head>
 <body>
 <ul id="menu">
   <li>
-    <a href="#">Menu 1</a>
+    <a id="menu1" href="#">Menu 1</a>
     <ul>
-      <li>level 1.1</li>
-      <li>level 1.2</li>
-      <li>level 1.3</li>
-      <li>level 1.4</li>
+      <li class="un">level 1.1</li>
+      <li class="un">level 1.2</li>
+      <li class="un">level 1.3</li>
+      <li class="un">level 1.4</li>
 
     </ul>
   </li>
   <li>
-    <a href="#">Menu 2</a>
-    <ul>
-      <li>level 2.1</li>
-      <li>level 2.2</li>
-      <li>level 2.3</li>
-      <li>level 2.4</li>
+    <a id="menu2" href="#">Menu 2</a>
+    <ul >
+      <li class="deux">level 2.1</li>
+      <li class="deux">level 2.2</li>
+      <li class="deux">level 2.3</li>
+      <li class="deux">level 2.4</li>
       
     </ul>
   </li>
   <li>
-    <a href="#">Menu 3</a>
+    <a id="menu3" href="#">Menu 3</a>
     <ul>
-      <li>level 3.1</li>
-      <li>level 3.2</li>
-      <li>level 3.3</li>
-      <li>level 3.4</li>
+      <li class="trois">level 3.1</li>
+      <li class="trois">level 3.2</li>
+      <li class="trois">level 3.3</li>
+      <li class="trois">level 3.4</li>
       
     </ul>
   </li>
@@ -46,11 +46,17 @@
 	<script type="text/javascript">
 
 	$(document).ready(function(){
+	$('.un, .deux, .trois').hide();
 
 
+	$('#menu1').click(function(){
+	$('.un').toggle(500);	});
 
-	$('a').click(function(){
-	$('ul li ul').toggle(1000);	});
+	$('#menu2').click(function(){
+	$('.deux').toggle(500);	});
+
+	$('#menu3').click(function(){
+	$('.trois').toggle(500);	});
 
 
 
