--- a/canvas.html
+++ b/canvas.html
@@ -52,10 +52,13 @@
 
 	function color(){
 		rectangle.fillStyle = "red";
+		rectangle.fillRect(0,0,300,x+10)
 
 	}
 	function origin(){
 		 rectangle.fillStyle = "#efde47";
+		 rectangle.fillRect(0,0,300,x+10)
+	
 	}
 
 	
